--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
     </head>
     <body>
         <h1>[嫄댁텞臾댄븳 〓㈃媛곸껜 / 嫄댁텞臾댄븳 〓㈃媛곸껜]</h1>
-        <p>[ì¶”ìƒ í™”]</p>
-        <p>“  ш컖 뺤쓽 대  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 “</p>
-        <p>[ì™¸ê´€]</p>
+        <p>[ì¶”ìƒ í™”]<br />
+            “  ш컖 뺤쓽 대  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 “<br />
+            [ì™¸ê´€]</p>
         <img src="/assets/logo.png/>
-        <p>[ì ´ë¦„]</p>
-        <p>嫄댁텞臾댄븳 〓㈃媛곸껜</p>
-        <p>[ì‚¬ë¬¼]</p>
-        <p>嫄댁텞臾댄븳 〓㈃媛곸껜</p>
-        <p>[ë‚˜ì ´]</p>
-        <p>援ъ떗 쇱꽭</p>
-        <p>í‚¤/ëª¸ë¬´ê²Œ</p>
-        <p>120 / 臾닿쾶  놁쓬</p>
-        <p>[ì„±ê²©]</p>
-        <p>- 蹂 뺤뒪 ъ슫</p>
-        <p>- 꾩뀑媛</p>
-        <p>- 遺덉븞 뺥븳</p>
-        <p>[íŠ¹ì§•]</p>
-        <p> 깃꺽 먯꽌  쒖닠  諛붿  媛숈씠  쒗빐 섍퀬 蹂  뺤뒪 ъ슦硫 遺덉븞 뺥븯    뺣쭚 洹멸쾶  ㅼ엫</p>
-        <p> 쒖긽 쒗뀒 湲곗깮 섎ŉ   ( 섎젅 댁뀡 몄쿃  섎뒗 ) 멸퀎議댁옱    쒖긽   곗폆 쇰줈  뚯쑀 댁꽌  댁컡  李 紐몄뿉  已믪븘 닿퀬   꾨쭩媛 踰꾨졇   洹몃옒   댁젣   쇱옄 몃뜲 湲곗깮  怨녹씠  깊엳  덈줈  꾩슂  嫄  꾨땲怨  낅┰ 곸쑝濡  댁븘   섎쭔  곕떎. 洹쇰뜲    쒖긽 쒗뀒 湲곗깮 덈깘硫  쒖긽    蹂댁옄留덉옄 * 쇱븙 誘몄튇  멸퀎 몄씠  遺꾨챸  섑븳  湲곗깮 댁꽌    뺤떊  留 吏 諛고븷嫄곗빞*  섍퀬  뚮━吏덈윭  洹멸구  먰븯  以  뚯븯  移대뜑  </p>
-        <p>----</p>
-        <p> ш컖 뺤쓽 대  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎.  ш컖 대궃 먯슫 숈쓽 ш컖 대궃 먯슫 숈쓽 ш컖 대궃   鍮꾨늻媛  듦낵 섎뒗 덇  섎퉬 쀫궡瑜쇳닾 쒗븯 붿궗   吏 援щ 紐⑦삎 쇰줈留뚮뱾 댁쭊吏 援ъ쓽瑜쇰え 뺤쑝濡쒕쭔 ㅼ뼱吏꾩 援  嫄곗꽭 쒖뼇留 (洹몄뿬 몄쓽 대쫫   뚯뼱利덉    鍮덊삁硫댄룷.  뱀떊 섏뼹援대튆源붾룄李몄깉 ㅻ━媛숈뒿 ㅻ떎.  됲뻾 щ  뺣 媛곸꽑諛⑺뼢 꾩텛吏꾪븯 붾쭑   쒖쨷   留덈Ⅴ 몄씠 좎쓽遊꾩쓣 대엺 쒖퐫 곗쓽 μ닔媛 留욎씠 쒕룞 묒쓽媛    苡뚯껌 섑븯 섏뿉遺뺤쑀 섎뒗Z諛깊샇.  뚯땐 묒빟 대씪怨좎뵆 댁졇 덈떎.  μ긽 뺤썝.  먰썑瑜쇳쓨 대궡 닿퀬 덈뒗留덈뱶臾댁븘   留뚭끝 쒖쭅 좎쓣吏곸꽑 쇰줈吏덉＜ 섎뒗 숈껜怨듭떇.  쒓퀎臾몄옄諛섏뿉 レ뿉 대━ 뚯쭊 먭컻 섏젚   ⑺샎.  꾩븘 섎궡遺  섎룄 꾩쓽 대  섏“濡깆쓽 대  섏뭅 섎━ 꾩쓽 대  섍컧 대Ц 몄쓽 대  섏씤    앸떦 섎Ц媛꾩뿉諛⑷툑 꾩갑 쒖옄 낃낵媛숈 遺뺤슦媛  ㅼ뼱吏꾨떎. 寃  뺤엵 ш  롮쭏 ъ쭊媛곸꽕 뺤씠 쇰쪣李⑥뿉 ㅻ┛   紐낇븿 꾩쭞諛잙뒗援곗슜 ν솕.媛 援щ 吏덇뎄 섎뒗議고솕湲덈젴.  꾩뿉 쒕궡 ㅼ삤怨좊컩 먯꽌 щ씪媛 怨좎쐞 먯꽌 대젮 ㅺ퀬諛묒뿉 쒖삱 쇨컙 щ엺  諛묒뿉 쒖삱 쇨 吏  꾨땲 쒖쐞 먯꽌 대젮 ㅼ  꾨땲 쒕컩 먯꽌 щ씪媛 吏  꾨땲 쒖쐞 먯꽌 대젮 ㅼ  꾨땲 쒖궗      ъ옄 섑븯諛섏    ⑥옄 섏긽諛섏뿉 ≪궗 섎떎.( 섎뒗 좎쿂濡쒖슫 댄썑 먯븷泥섎줈 뚰븯 붾굹)  ш컖 대궃耳    ㅺ 嫄룰린 쒖옉 쒕떎.( 뚮쫫 대겮移섎뒗 쇱씠    쇱  먥  곗쓽洹쇰갑 먯꽌 뱀쿇 섎뒗援노튌   諛붽묑  鍮  諛쒓킅 대쪟 섍뎔吏묒씠  </p>
+        <p>[ì ´ë¦„]
+            嫄댁텞臾댄븳 〓㈃媛곸껜<br />
+        [ì‚¬ë¬¼]<br />
+        嫄댁텞臾댄븳 〓㈃媛곸껜<br />
+        [ë‚˜ì ´]<br />
+        援ъ떗 쇱꽭<br />
+        í‚¤/ëª¸ë¬´ê²Œ<br />
+        120 / 臾닿쾶  놁쓬<br />
+        [ì„±ê²©]<br />
+        - 蹂 뺤뒪 ъ슫<br />
+        - 꾩뀑媛<br />
+        - 遺덉븞 뺥븳<br />
+        [íŠ¹ì§•]<br />
+         깃꺽 먯꽌  쒖닠  諛붿  媛숈씠  쒗빐 섍퀬 蹂  뺤뒪 ъ슦硫 遺덉븞 뺥븯    뺣쭚 洹멸쾶  ㅼ엫<br />
+         쒖긽 쒗뀒 湲곗깮 섎ŉ   ( 섎젅 댁뀡 몄쿃  섎뒗 ) 멸퀎議댁옱    쒖긽   곗폆 쇰줈  뚯쑀 댁꽌  댁컡  李 紐몄뿉  已믪븘 닿퀬   꾨쭩媛 踰꾨졇   洹몃옒   댁젣   쇱옄 몃뜲 湲곗깮  怨녹씠  깊엳  덈줈  꾩슂  嫄  꾨땲怨  낅┰ 곸쑝濡  댁븘   섎쭔  곕떎. 洹쇰뜲    쒖긽 쒗뀒 湲곗깮 덈깘硫  쒖긽    蹂댁옄留덉옄 * 쇱븙 誘몄튇  멸퀎 몄씠  遺꾨챸  섑븳  湲곗깮 댁꽌    뺤떊  留 吏 諛고븷嫄곗빞*  섍퀬  뚮━吏덈윭  洹멸구  먰븯  以  뚯븯  移대뜑  <br />
+        ----<br />
+         ш컖 뺤쓽 대  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎 섎궡遺  섏궗媛곹삎.  ш컖 대궃 먯슫 숈쓽 ш컖 대궃 먯슫 숈쓽 ш컖 대궃   鍮꾨늻媛  듦낵 섎뒗 덇  섎퉬 쀫궡瑜쇳닾 쒗븯 붿궗   吏 援щ 紐⑦삎 쇰줈留뚮뱾 댁쭊吏 援ъ쓽瑜쇰え 뺤쑝濡쒕쭔 ㅼ뼱吏꾩 援  嫄곗꽭 쒖뼇留 (洹몄뿬 몄쓽 대쫫   뚯뼱利덉    鍮덊삁硫댄룷.  뱀떊 섏뼹援대튆源붾룄李몄깉 ㅻ━媛숈뒿 ㅻ떎.  됲뻾 щ  뺣 媛곸꽑諛⑺뼢 꾩텛吏꾪븯 붾쭑   쒖쨷   留덈Ⅴ 몄씠 좎쓽遊꾩쓣 대엺 쒖퐫 곗쓽 μ닔媛 留욎씠 쒕룞 묒쓽媛    苡뚯껌 섑븯 섏뿉遺뺤쑀 섎뒗Z諛깊샇.  뚯땐 묒빟 대씪怨좎뵆 댁졇 덈떎.  μ긽 뺤썝.  먰썑瑜쇳쓨 대궡 닿퀬 덈뒗留덈뱶臾댁븘   留뚭끝 쒖쭅 좎쓣吏곸꽑 쇰줈吏덉＜ 섎뒗 숈껜怨듭떇.  쒓퀎臾몄옄諛섏뿉 レ뿉 대━ 뚯쭊 먭컻 섏젚   ⑺샎.  꾩븘 섎궡遺  섎룄 꾩쓽 대  섏“濡깆쓽 대  섏뭅 섎━ 꾩쓽 대  섍컧 대Ц 몄쓽 대  섏씤    앸떦 섎Ц媛꾩뿉諛⑷툑 꾩갑 쒖옄 낃낵媛숈 遺뺤슦媛  ㅼ뼱吏꾨떎. 寃  뺤엵 ш  롮쭏 ъ쭊媛곸꽕 뺤씠 쇰쪣李⑥뿉 ㅻ┛   紐낇븿 꾩쭞諛잙뒗援곗슜 ν솕.媛 援щ 吏덇뎄 섎뒗議고솕湲덈젴.  꾩뿉 쒕궡 ㅼ삤怨좊컩 먯꽌 щ씪媛 怨좎쐞 먯꽌 대젮 ㅺ퀬諛묒뿉 쒖삱 쇨컙 щ엺  諛묒뿉 쒖삱 쇨 吏  꾨땲 쒖쐞 먯꽌 대젮 ㅼ  꾨땲 쒕컩 먯꽌 щ씪媛 吏  꾨땲 쒖쐞 먯꽌 대젮 ㅼ  꾨땲 쒖궗      ъ옄 섑븯諛섏    ⑥옄 섏긽諛섏뿉 ≪궗 섎떎.( 섎뒗 좎쿂濡쒖슫 댄썑 먯븷泥섎줈 뚰븯 붾굹)  ш컖 대궃耳    ㅺ 嫄룰린 쒖옉 쒕떎.( 뚮쫫 대겮移섎뒗 쇱씠    쇱  먥  곗쓽洹쇰갑 먯꽌 뱀쿇 섎뒗援노튌   諛붽묑  鍮  諛쒓킅 대쪟 섍뎔吏묒씠  </p>
     </body>
 
 </html>
+
 
 
